--- a/templates/team/index.html.twig
+++ b/templates/team/index.html.twig
@@ -1,42 +1,49 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Team index{% endblock %}
+{% block title %}Teams{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/tables.css') }}">
 {% endblock %}
 
 {% block body %}
-    <h1>Team index</h1>
+    <div class="centered-div">
+        <h1>Team index</h1>
 
-    <table class="table">
-        <thead>
+        <table class="content-table">
+            <thead>
             <tr>
                 <th>Id</th>
                 <th>Name</th>
                 <th>NrPeople</th>
                 <th>actions</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for team in teams %}
+            </thead>
+            <tbody>
+            {% for team in teams %}
+                <tr>
+                    <td>{{ team.id }}</td>
+                    <td>{{ team.name }}</td>
+                    <td>{{ team.nrPeople }}</td>
+                    <td>
+                        <a href="{{ path('app_team_edit', {'id': team.id}) }}">edit</a>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="4">no records found</td>
+                </tr>
+            {% endfor %}
             <tr>
-                <td>{{ team.id }}</td>
-                <td>{{ team.name }}</td>
-                <td>{{ team.nrPeople }}</td>
-                <td>
-                    <a href="{{ path('app_team_show', {'id': team.id}) }}">show</a>
-                    <a href="{{ path('app_team_edit', {'id': team.id}) }}">edit</a>
-                </td>
+                <td></td>
+                <td><a href="{{ path('app_team_new') }}">Create new</a></td>
+                <td></td>
+                <td></td>
             </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
-    <a href="{{ path('app_team_new') }}">Create new</a>
+    </div>
+
 {% endblock %}
