--- a/templates/teams_have_matches/edit.html.twig
+++ b/templates/teams_have_matches/edit.html.twig
@@ -3,11 +3,13 @@
 {% block title %}Edit TeamsHaveMatches{% endblock %}
 
 {% block body %}
-    <h1>Edit TeamsHaveMatches</h1>
+    <div class="centered-div">
+        <h1>Edit TeamsHaveMatches</h1>
 
-    {{ include('teams_have_matches/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('teams_have_matches/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_teams_have_matches_index') }}">back to list</a>
+        <a href="{{ path('app_teams_have_matches_index') }}">back to list</a>
 
-    {{ include('teams_have_matches/_delete_form.html.twig') }}
+        {{ include('teams_have_matches/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
