--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -13,7 +13,7 @@
     padding: 10px 20px;
     border: none;
     border-radius: 8px;
-    background-color: #009879;
+    background-color: darkgreen;
     color: #ffffff;
     text-align: center;
     text-decoration: none;
