--- a/public/css/tables.css
+++ b/public/css/tables.css
@@ -11,7 +11,7 @@
 }
 
 .content-table thead tr {
-    background-color: #009879;
+    background-color: darkgreen;
     color: #ffffff;
     text-align: center;
     font-weight: bold;
@@ -31,10 +31,10 @@
 }
 
 .content-table tbody tr:last-of-type {
-    border-bottom: 40px solid #009879;
+    border-bottom: 40px solid  darkgreen;
 }
 
 .content-table tbody tr.active-row {
     font-weight: bold;
-    color: #009879;
+    color:  darkgreen;
 }
