--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -8,23 +8,5 @@
 {% endblock %}
 
 {% block body %}
-    <div class="centered-div">
-        <h1>Main menu</h1>
-        <div class="button-container">
-            <button id="showCompetition" class="rounded-button">Current Competition</button>
-            <div id="hiddenButtons" class="hidden">
-                <a href="/ranking" class="rounded-button">Ranking</a>
-                <a href="/team" class="rounded-button">Teams</a>
-                <a href="/summer/match" class="rounded-button">Set match</a>
-                <a href="/teams/have/matches/" class="rounded-button">Matches</a>
-            </div>
-            <button class="rounded-button">Reset Competition</button>
-        </div>
-    </div>
-
-    <script>
-        document.getElementById('showCompetition').addEventListener('click', function () {
-            document.getElementById('hiddenButtons').classList.remove('hidden');
-        });
-    </script>
+    {{ parent() }}
 {% endblock %}
