--- a/templates/teams_have_matches/index.html.twig
+++ b/templates/teams_have_matches/index.html.twig
@@ -5,20 +5,32 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/tables.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/buttons.css') }}">
 {% endblock %}
 
 {% block body %}
-    <div class ="centered-div">
-        <h1>TeamsHaveMatches index</h1>
-
+    <div class="content">
+        <h1>Welcome to my application</h1>
+        <br>
+        <br>
+        <h4>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </h4>
+    </div>
+    <div class="content">
         <table class="content-table">
             <thead>
             <tr>
-                <th>Action1</th>
+                <th>Edit T1</th>
                 <th>Team1</th>
                 <th>Score</th>
                 <th>Team2</th>
-                <th>Action2</th>
+                <th>Edit T2</th>
             </tr>
             </thead>
             <tbody>
@@ -27,17 +39,13 @@
                     {% set teamTeams = teams_have_match.Teams|split(',') %}
                     {% set teamIDs = teams_have_match.IDs|split(',') %}
                     <td>
-                        <a href="{{ path('app_teams_have_matches_edit', {'id': teamIDs[0] }) }}">
-                            edit
-                        </a>
+                        <a class="rounded-button" href="{{ path('app_teams_have_matches_edit', {'id': teamIDs[0] }) }}">edit</a>
                     </td>
                     <td>{{ teamTeams[0] }}</td>
                     <td>{{ teams_have_match.Score|split(',')|join('-') }}</td>
                     <td>{{ teamTeams[1] }}</td>
                     <td>
-                        <a href="{{ path('app_teams_have_matches_edit', {'id': teamIDs[1] }) }}">
-                            edit
-                        </a>
+                        <a class="rounded-button" href="{{ path('app_teams_have_matches_edit', {'id': teamIDs[1] }) }}">edit</a>
                     </td>
                 </tr>
             {% else %}
