--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -4,11 +4,6 @@
     gap: 10px;
 }
 
-.hidden-button-container {
-    display: flex;
-    gap: 10px;
-}
-
 .rounded-button {
     padding: 10px 20px;
     border: none;
@@ -23,6 +18,7 @@
     cursor: pointer;
 }
 
-.hidden {
-    display: none;
+.rounded-button:hover {
+    background: green;
+    transition: 0.5s;
 }
