--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -4,9 +4,23 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('css/buttons.css') }}">
 {% endblock %}
 
 {% block body %}
-    {{ parent() }}
+    <div class="content">
+        <h1>Welcome to my application</h1>
+        <br>
+        <br>
+        <h4>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </h4>
+    </div>
+    <div class="content">
+        <img src="{{ asset('trophy.png') }}" alt="Trophy">
+    </div>
 {% endblock %}
