--- a/templates/ranking/index.html.twig
+++ b/templates/ranking/index.html.twig
@@ -8,9 +8,20 @@
 {% endblock %}
 
 {% block body %}
-    <div class="centered-div">
-        <h1>Current placements</h1>
-
+    <div class="content">
+        <h1>Welcome to my application</h1>
+        <br>
+        <br>
+        <h4>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </h4>
+    </div>
+    <div class="content">
         <table class="content-table">
             <thead>
             <tr>
@@ -34,6 +45,4 @@
             </tbody>
         </table>
     </div>
-
-
 {% endblock %}
