--- a/templates/team/index.html.twig
+++ b/templates/team/index.html.twig
@@ -5,29 +5,39 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/tables.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/buttons.css') }}">
 {% endblock %}
 
 {% block body %}
-    <div class="centered-div">
-        <h1>Team index</h1>
-
+    <div class="content">
+        <h1>Welcome to my application</h1>
+        <br>
+        <br>
+        <h4>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </h4>
+    </div>
+    <div class="content">
         <table class="content-table">
             <thead>
             <tr>
-                <th>Id</th>
                 <th>Name</th>
-                <th>NrPeople</th>
-                <th>actions</th>
+                <th>Players</th>
+                <th>Edit</th>
             </tr>
             </thead>
             <tbody>
             {% for team in teams %}
                 <tr>
-                    <td>{{ team.id }}</td>
                     <td>{{ team.name }}</td>
                     <td>{{ team.nrPeople }}</td>
                     <td>
-                        <a href="{{ path('app_team_edit', {'id': team.id}) }}">edit</a>
+                        <a class="rounded-button" href="{{ path('app_team_edit', {'id': team.id}) }}">edit</a>
                     </td>
                 </tr>
             {% else %}
@@ -35,15 +45,9 @@
                     <td colspan="4">no records found</td>
                 </tr>
             {% endfor %}
-            <tr>
-                <td></td>
-                <td><a href="{{ path('app_team_new') }}">Create new</a></td>
-                <td></td>
-                <td></td>
-            </tr>
+
             </tbody>
         </table>
-
+        <a class="rounded-button" href="{{ path('app_team_new') }}">Create new</a>
     </div>
-
 {% endblock %}
