--- a/templates/team/edit.html.twig
+++ b/templates/team/edit.html.twig
@@ -2,12 +2,20 @@
 
 {% block title %}Edit Team{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/buttons.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/edit_form.css') }}">
+{% endblock %}
+
 {% block body %}
-    <h1>Edit Team</h1>
+    <div class="content">
+        <h1>Edit Team</h1>
 
-    {{ include('team/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('team/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_team_index') }}">back to list</a>
+        <a class="rounded-button" href="{{ path('app_team_index') }}">Back</a>
 
-    {{ include('team/_delete_form.html.twig') }}
+        {{ include('team/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
