--- a/templates/team/_form.html.twig
+++ b/templates/team/_form.html.twig
@@ -1,4 +1,6 @@
-{{ form_start(form) }}
+{{ form_start(form, {'attr': {'class': 'edit-form'}}) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="rounded-button">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
+<link rel="stylesheet" href="{{ asset('css/edit_form.css') }}">
+
