--- a/templates/teams_have_matches/_delete_form.html.twig
+++ b/templates/teams_have_matches/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_teams_have_matches_delete', {'id': teams_have_match.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ teams_have_match.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn rounded-button">Delete</button>
 </form>
