--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -8,16 +8,13 @@
 
 {% block body %}
     <div class="content">
-        <h1>Welcome to my application</h1>
+        <h1>Welcome to CoManager,</h1>
         <br>
         <br>
         <h4>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            To enjoy this app you may start using it, without any authentication,
+            by clicking on the buttons on the navbar above, each button is related
+            in some way to the competition, try it out!
         </h4>
     </div>
     <div class="content">
