--- a/templates/ranking/index.html.twig
+++ b/templates/ranking/index.html.twig
@@ -9,16 +9,13 @@
 
 {% block body %}
     <div class="content">
-        <h1>Welcome to my application</h1>
+        <h1>Ranking</h1>
         <br>
         <br>
         <h4>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Here you will see the ranking of the teams that you have created.
+            Whenever you set the winner of a match the ranking table will update
+            automatically with either 3,1 or 0 points (win, draw, lose)
         </h4>
     </div>
     <div class="content">
