--- a/templates/summer_match/index.html.twig
+++ b/templates/summer_match/index.html.twig
@@ -10,16 +10,12 @@
 
 {% block body %}
     <div class="content">
-        <h1>Welcome to my application</h1>
+        <h1>Match dates</h1>
         <br>
         <br>
         <h4>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Here you will reserve a timeslot for a match, when you reserve the timeslot, automatically,
+            a match between 2 teams will be created in the matches table
         </h4>
     </div>
     <div class="content">
