--- a/templates/teams_have_matches/index.html.twig
+++ b/templates/teams_have_matches/index.html.twig
@@ -10,16 +10,11 @@
 
 {% block body %}
     <div class="content">
-        <h1>Welcome to my application</h1>
+        <h1>Matches</h1>
         <br>
         <br>
         <h4>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Here, you will decide which teams will be placed in the reserved time slot
         </h4>
     </div>
     <div class="content">
