--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,9 +14,11 @@
         {% block javascripts %}
         {% endblock %}
     </head>
+    {% block body %}
     <body>
+
         <nav class="nav">
-            <label class="logo"><a href="/">MyApp</a></label>
+            <label class="logo"><a href={{ path('app_homepage_index') }}>CoManager</a></label>
             <ul class="nav-links">
                 <li><a>New competition</a></li>
                 <li><a href="{{ path('app_ranking_index') }}">Ranking</a></li>
@@ -26,7 +28,7 @@
             </ul>
         </nav>
         <div class="content-container">
-            {% block body %}
+            {% block content %}
 
             {% endblock %}
         </div>
@@ -34,4 +36,5 @@
             <p>&copy; 2023 CoManager. All rights reserved.</p>
         </footer>
     </body>
+    {% endblock %}
 </html>
