--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -7,6 +7,11 @@
 {% endblock %}
 
 {% block body %}
+    {{ parent() }}
+
+{% endblock %}
+
+{% block content %}
     <div class="content">
         <h1>Welcome to CoManager,</h1>
         <br>
