--- a/templates/team/new.html.twig
+++ b/templates/team/new.html.twig
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block body %}
+    {{ parent() }}
+
+{% endblock %}
+
+{% block content %}
     <div class="content">
         <h1>Create new Team</h1>
 
