--- a/templates/teams_have_matches/edit.html.twig
+++ b/templates/teams_have_matches/edit.html.twig
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block body %}
+    {{ parent() }}
+
+{% endblock %}
+
+{% block content %}
     <div class="content">
         <h1>Edit data about this team</h1>
 
