--- a/templates/teams_have_matches/new.html.twig
+++ b/templates/teams_have_matches/new.html.twig
@@ -3,6 +3,11 @@
 {% block title %}New TeamsHaveMatches{% endblock %}
 
 {% block body %}
+    {{ parent() }}
+
+{% endblock %}
+
+{% block content %}
     <h1>Create new TeamsHaveMatches</h1>
 
     {{ include('teams_have_matches/_form.html.twig') }}
