date in Matches

--- a/templates/ranking/index.html.twig
+++ b/templates/ranking/index.html.twig
@@ -24,6 +24,9 @@
             Whenever you set the winner of a match the ranking table will update
             automatically with either 3,1 or 0 points (win, draw, lose)
         </h4>
+        <h4>
+            By clicking on the header of the table, you may sort the table based on the header that you selected
+        </h4>
     </div>
     <div class="content">
         {% block table %}
