--- a/templates/summer_match/index.html.twig
+++ b/templates/summer_match/index.html.twig
@@ -22,6 +22,9 @@
             Here you will reserve a timeslot for a match, when you reserve the timeslot, automatically,
             a match between 2 teams will be created in the matches table
         </h4>
+        <h4>
+            By clicking on the header of the table, you may sort the table based on the header that you selected
+        </h4>
     </div>
     <div class="content">
         <table class="content-table">
