--- a/templates/team/index.html.twig
+++ b/templates/team/index.html.twig
@@ -21,6 +21,9 @@
         <h4>
             Here you will create, update or delete the teams that participate in the competition
         </h4>
+        <h4>
+            By clicking on the header of the table, you may sort the table based on the header that you selected
+        </h4>
     </div>
     <div class="content">
         <table class="content-table">
