--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,6 +44,11 @@ label.logo a{
     color:white;
 }
 
+p.login-link a{
+    text-decoration: none;
+    color: white;
+}
+
 .nav-links a:hover {
     background: green;
     transition: 0.5s;
